--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,10 @@
 	<header>
 		<div class="row">
 		<ul class="main-nav">
-			<li class="main-nav"><a href=""> HOME </a></li>
-			<li class="main-nav"><a href=""> CONTACT </a></li>
-			<li class="main-nav"><a href=""> FAQ </a></li>
-			<li class="main-nav"><a href=""> ABOUT </a></li>
+			<li><a href=""> HOME </a></li>
+			<li class="active"><a href=""> CONTACT </a></li>
+			<li><a href=""> FAQ </a></li>
+			<li><a href=""> ABOUT </a></li>
 			
 
 		</ul>
