--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
 	<header>
 		<div class="row">
 		<ul class="main-nav">
-			<li class="main-nav"><a href=""> HOME </a></li>
-			<li class="main-nav"><a href=""> CONTACT </a></li>
-			<li class="main-nav"><a href=""> FAQ </a></li>
-			<li class="main-nav"><a href=""> ABOUT </a></li>
+			<li><a href="index.html"> HOME </a></li>
+			<li><a href="contact.html"> CONTACT </a></li>
+			<li><a href="faq.html"> FAQ </a></li>
+			<li class="active"><a href="about.html"> ABOUT </a></li>
 			
 
 		</ul>
