--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<div class="row">
 		<ul class="main-nav">
 			<li class="active"><a href=""> HOME </a></li>
-			<li><a href=""> CONTACT </a></li>
-			<li><a href=""> FAQ </a></li>
-			<li><a href=""> ABOUT </a></li>
+			<li><a href="contact.html"> CONTACT </a></li>
+			<li><a href="faq.html"> FAQ </a></li>
+			<li><a href="about.html"> ABOUT </a></li>
 			
 
 		</ul>
