--- a/faq.html
+++ b/faq.html
@@ -7,15 +7,15 @@
 	<header>
 		<div class="row">
 		<ul class="main-nav">
-			<li><a href=""> HOME </a></li>
-			<li><a href=""> CONTACT </a></li>
+			<li><a href="index.html"> HOME </a></li>
+			<li><a href="contact.html"> CONTACT </a></li>
 			<li class="active"><a href=""> FAQ </a></li>
-			<li><a href=""> ABOUT </a></li>
+			<li><a href="about.html"> ABOUT </a></li>
 			
 
 		</ul>
 	</div>
-	
+
 	<div class="title">
 		<h1>About</h1>
 	</div>
