--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 		<div class="title">
 			<h1>Toaster</h1>
+
+			<div class="button">
+				<a href="" class="btn btn-one"> About </a>
+			</div>
 		</div>
 	</header>
 </body>
