--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Toaster</h1>
 
 			<div class="button">
-				<a href="" class="btn btn-one"> About </a>
+				<a href="about.html" class="btn btn-one"> About </a>
 			</div>
 		</div>
 	</header>
