--- a/about.html
+++ b/about.html
@@ -15,10 +15,24 @@
 
 		</ul>
 	</div>
-
+	
 	<div class="title">
 		<h1>About</h1>
 	</div>
+
+	<div class="aAll a1">
+		<h3> I do quality. </h3>
+	</div>
+	<div class="aAll a2">
+		<h3> I get things done. </h3>
+	</div>
+
+	<div class="aboutText">
+		<h3> Hello. I am Toaster, and I love digital art. </h3>
+	</div>
 	</header>
+
+
+
 </body>
 </html>
