--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<html>
+<!DOCTYPE html>
 <head>
 	<title>Toaster</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<header>
 		<div class="row">
 		<ul class="main-nav">
+			<button class="btn btn-twitch"><a href="https://www.twitch.tv/toasterstoastbutalsodraw"><i class="fab fa-twitch"></a></i></button>
+			<button class="btn btn-twitch"><a href="https://www.twitch.tv/toasterstoastbutalsodraw"><i class="fab fa-youtube"></a></i></button>
 			<li class="active"><a href=""> HOME </a></li>
 			<li><a href="contact.html"> CONTACT </a></li>
 			<li><a href="faq.html"> FAQ </a></li>
